fix desktop overflow for kene's section

--- a/style.css
+++ b/style.css
@@ -1042,7 +1042,7 @@ span {
   padding: 7rem 0 0;
   border-radius: 40px;
   text-align: center;
-  height: 80vh;
+  min-height: 80vh;
   display: grid;
   grid-template-rows: 5rem 8rem 15rem 1fr;
   /* background-image: to right bottom url(img/hero-path.svg); */
